# prognostic-fleet-maintenance

./: .gitignore  README.md  pyproject.toml  requirements.txt  ~$README.md
app/: streamlit_app.py
models/: xgb_baseline.joblib
notebooks/: 01_eda.ipynb
src/: cnn_lstm.py  data.py  evaluation.py  explain.py  features.py  model.py  targets.py
tests/: test_evaluation.py  test_features.py  test_targets.py
